# datakoen

./: .dockerignore  .gitignore  .pdm-python  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  asset_config.yaml  config.yaml  fly.toml  fly_launch.sh  install.sh  pyproject.toml  req-old.txt  requirements.txt  tox.ini
.github/.workflows/: code-check.yml
.github/workflows/: deploy_fly.yml  deploy_services.yml  pipeline.yml  prep_docker.yml  xx.yml
.streamlit/: config.toml
app/: Dockerfile  Home.py  Makefile  config.yaml  fly.toml  home.py  overwrite-metadata.py  pyproject.toml  template-pages.py  tes.py
app/app/temp_viz/: F3AUwDCH-data.geojson  F3AUwDCH-lerengviz.html  rPyJQtkj-data.geojson  rPyJQtkj-lerengviz.html
app/assets/markdowns/: footer.md  home.md  indomap-opening.md  indomap-table-explain.md
app/assets/templates/: auto_slider.html  human_slider.html
app/on-dev/: 4_hypothesis_testing.py  5_sample_size.py
app/pages/: 1_Ask_Hanzo.py  1_Explore.py  1_Pivoting.py  1_askHanzo.py  1_page_one.py  1_pivoting.py  2_Hypothesis_Testing.py  2_IndoMap.py  2_Indo_Map.py  2_Regression.py  2_page_two.py  2_regression.py  2_sample_size.py  3_Hypothesis_Testing.py  3_SliderNumber.py  3_hypothesis_testing.py  3_timeseries.py  4_Regression.py  4_hypothesis_testing.py  4_page_four.py  4_sample_size.py  5_page_five.py  5_sample_size.py  5_timeseries.py
app/pages/deprecated-pages/: 1_pivoting.py  2_regression.py  3_timeseries.py  4_hypothesis_testing.py  5_sample_size.py
app/pages/regression/: assets.py  main.py  utils.py
app/pages/tools/: assets.py  calc.py  common.py  content.py  datamart.py  utils.py
app/src/: overwrite-metadata.py  template-pages.py
app/temp_viz/: lereng_viz.html  map_with_data.geojson
assets/: human_slider.html
assets/markdowns/: [Deprecated] home.md  footer-sidebar.html  footer-sidebar.md  footer.html  footer.md  home.md  indomap-table-explain.md
logs/: koenlogs.md
samples/: test.ipynb  trx_plu_202212.xlsx
services/dolp-dive/: .pdm-python  Dockerfile  Makefile  apt_req.txt  install.sh  main.py  pyproject.toml
services/placeholder/: README.md
styles/: hanzo_container.css  map_container.css  sidebar_footer.css  start_button.css
