[project]
name = "datakoen"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "alamhanz", email = "alamhanz@gmail.com"},
]
dependencies = [
    "PyYAML==6.0",
    "streamlit==1.40.1",
    "streamlit-extras==0.4.3",
    "hanzo @ git+https://github.com/alamhanz/hanzo.git#0.2.10",
    "lereng @ git+https://github.com/alamhanz/lereng.git#0.1.0",
    "dolphin @ git+https://github.com/alamhanz/dolphin.git#0.1.2",
    "sliding-puzzles==0.9.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.isort]
profile = "black"