[project]
name = "dolp-dive"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "alamhanz", email = "alamhanz@gmail.com"},
]
dependencies = ["fastapi>=0.115.8", "uvicorn>=0.34.0", "dolphin @ git+https://github.com/alamhanz/dolphin.git#0.1.3"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
