[project]
name = "dolp-dive"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "alamhanz", email = "alamhanz@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "dolphin @ git+https://github.com/alamhanz/dolphin.git#0.1.3",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "torch"


[tool.pdm.resolution]
# Don't let PDM install all these runtime libraries -- they add GB's of bloat!
excludes = [
  "nvidia-cublas-cu12",
  "nvidia-cuda-cupti-cu12",
  "nvidia-cuda-nvrtc-cu12",
  "nvidia-cuda-runtime-cu12",
  "nvidia-cudnn-cu12",
  "nvidia-cufft-cu12",
  "nvidia-curand-cu12",
  "nvidia-cusolver-cu12",
  "nvidia-cusparse-cu12",
  "nvidia-nccl-cu12",
  "nvidia-nvtx-cu12",
  "triton",
]
